Fixed Reg Alignment

--- a/studentReg.css
+++ b/studentReg.css
@@ -1,20 +1,18 @@
-input {
-	width:20%;
-}
 .title {
 	text-indent: 20px;
 }
 .forms {
 	position: relative;
-	font-size: 130%;
+	font-size: 100%;
+	width: 50%;
 }
 .left {
-    width: 10%;
+    width: 35%;
     float: left;
     text-align: right;
 }
 .right {
-    width: 80%;
+    width: 60%;
     margin-left: 10px;
     float:left;
 }
